# OpenCV_Rust

./: Cargo.toml  README.md
src/: main.rs
