[package]
name = "opencv_cam"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = "0.94"
ort = "1.16"
ndarray = "0.16"
image = "0.25"

[[bin]]
name = "onnx_test"
path = "src/bin/onnx_test.rs"

[[bin]]
name = "onnx_test_fixed"
path = "src/bin/onnx_test_fixed.rs"

[[bin]]
name = "simple_onnx"
path = "src/bin/simple_onnx.rs"
